server/public/styles.css
.fa-tree-1 {
  left: 8px;
  top: 7px;
  color: white;
}

.fa-tree-2 {
  left: 16px;
  top: 12px;
}

.fa-tree-3 {
  left: 16px;
  top: 12px;
}

.fa-square,
.fa-square-check {
  color: black;
}

.fa-plus {
  width: 24px;
  height: 24px;
}

.button-search {
  right: 0.1px;
  top: 0.1px;
  color: #b0b0b0;
  border: 90px solid #b0b0b0;
}

.border-radius-10px {
  border-radius: 10px;
}

.border-radius-20px {
  border-radius: 20px;
}

.border-radius-90px {
  border-radius: 90px;
}

.w-60 {
  width: 60%;
}

.entry-form-single {
  height: 2.25rem;
  padding-left: 1rem;
}

.h-40px {
  height: 40px;
}

.h-24px {
  height: 24px;
}

.map-placeholder {
  min-height: 600px;
  border: 1px solid black;
}

.text-brown {
  color: #c26f30;
}

.text-gray {
  color: #b0b0b0;
}

::placeholder {
  color: #b0b0b0;
}

.pb-page {
  padding-bottom: 4rem;
  margin-bottom: 1rem;
}

img {
  object-fit: cover;
  height: 230px;
}

img.new-entry {
  height: 270px;
}

img.new-entry-success {
  height: 300px;
  width: 100%;
}

footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #f6f9f9;
}

.searchbar {
  width: 100%;
}

@media only screen and (max-width: 992px) {
  .home-age-range {
    display: none;
  }
}

@media only screen and (min-width: 768px) {
  .custom-dialog-menu {
    width: 25% !important;
  }

  .carousel {
    max-width: 450px;
  }

  img {
    height: 270px;
    min-width: 300px;
  }

  img.new-entry-success {
    height: 350px;
    width: 100%;
  }

  .searchbar {
    width: 450px;
  }

  footer {
    display: none;
  }

  .pb-page {
    padding-bottom: 1rem;
    margin-bottom: 0.5rem;
  }

  .carousel-overlap {
    transform: scale(1.2);
  }
}

@media only screen and (min-width: 992px) {
  .carousel-overlap {
    position: absolute;
    left: 10rem;
    bottom: 0.1rem;
    transform: scale(1.2);
  }

  img.new-entry {
    height: 300px;
    width: 100%;
  }

  img.new-entry-success {
    height: 270px;
    width: 50%;
    top: 4rem;
    right: 1.5rem;
    position: absolute;
  }
}

@media only screen and (min-width: 1200px) {
  .carousel-overlap {
    position: absolute;
    left: 13rem;
    bottom: 0.1rem;
    transform: scale(1.3);
  }

  img.new-entry {
    height: 330px;
  }

  img.new-entry-success {
    height: 300px;
    width: 45%;
    top: 4rem;
    right: 1.5rem;
    position: absolute;
  }
}

@media only screen and (min-width: 1400px) {
  .carousel-overlap {
    position: absolute;
    left: 18rem;
    bottom: 0.1rem;
    transform: scale(1.3);
  }

  img.new-entry {
    height: 360px;
  }

  img.new-entry-success {
    height: 300px;
    width: 45%;
    top: 4rem;
    right: 1.5rem;
    position: absolute;
  }
}

